fixed 100vh on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --doc-height: 100%;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -6,6 +10,8 @@
 }
 
 body {
+  height: 100vh; /* fallback for Js load */
+  height: var(--doc-height);
   background: rgb(50, 50, 152);
   background: linear-gradient(45deg, rgba(50, 50, 152, 1) 32%, rgba(192, 232, 240, 1) 100%);
 }
